# gemini-api

./: CHANGELOG.md  Cargo.toml  README.md
src/: lib.rs  param.rs
src/body/: error.rs  mod.rs  request.rs  response.rs
src/model/: blocking.rs  mod.rs
src/utils/: image.rs  mod.rs
tests/: blocking_client_test.rs  client_test.rs
