[package]
name = "gemini-api"
version = "0.2.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.39.2", features = ["full"] }
tokio-macros = "2.4.0"
anyhow = "1.0.86"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"

[features]
default = []
blocking = ["reqwest/blocking"]
