[package]
name = "gemini-api"
version = "0.4.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
] }
tokio = { version = "1.39.2", features = ["full"] }
tokio-macros = "2.4.0"
anyhow = "1.0.86"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.127"
image = { version = "0.25.2", optional = true }
base64 = { version = "0.22.1", optional = true }

[features]
default = []
network_test = []
blocking = ["reqwest/blocking"]
image_analysis = ["image", "base64"]
